--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.flashlearn/com.flashlearn.HelloApplication</mainClass>
+              <mainClass>com.flashlearn/com.flashlearn.MainMenu</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
